[gd_scene load_steps=5 format=3 uid="uid://idb7um4yw864"]

[ext_resource type="Script" path="res://scenes/levels/health_station.gd" id="1_vcnvw"]
[ext_resource type="Texture2D" uid="uid://c3xc5g4cv24hm" path="res://graphics/healthkit.png" id="2_v53wu"]
[ext_resource type="Texture2D" uid="uid://d2ap7oi85wt5e" path="res://graphics/coin.png" id="3_64uym"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8whhp"]
size = Vector2(39.5, 35.5)

[node name="HealthStation" type="Node2D"]
script = ExtResource("1_vcnvw")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-6, 2.13163e-14)
rotation = 1.5708
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_v53wu")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-7.75, 0.25)
shape = SubResource("RectangleShape2D_8whhp")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(36, 4)
scale = Vector2(0.0413851, 0.0413851)
texture = ExtResource("3_64uym")

[node name="Label" type="Label" parent="."]
offset_left = 14.0
offset_top = -9.0
offset_right = 54.0
offset_bottom = 14.0
text = "= "

[node name="Label2" type="Label" parent="."]
offset_left = 49.0
offset_top = -9.0
offset_right = 89.0
offset_bottom = 14.0
text = "5"

[node name="Title" type="Label" parent="."]
offset_left = -74.0
offset_top = 9.0
offset_right = 118.0
offset_bottom = 65.0
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
